Changing build systemt o allow for checking or apache software presence

--- a/dist.ini
+++ b/dist.ini
@@ -1,1 +1,20 @@
 [@Milla]
+-remove = ModuleBuildTiny
+
+[MakeMaker::Awesome]
+delimiter = |
+header_strs = |{
+header_strs = |  my ($httpd) = do {
+header_strs = |    use File::Which qw/ which /;
+header_strs = |    local $ENV{PATH} = join( ':',
+header_strs = |      map {
+header_strs = |        my $copy = $_;
+header_strs = |          ( $copy =~ s!/bin$!/sbin!
+header_strs = |            ? ( $copy,$_ )
+header_strs = |            : $_
+header_strs = |          )
+header_strs = |        } split ':', $ENV{PATH} );
+header_strs = |    grep defined, map scalar( which $_ ), qw/ httpd apache apache2 /;
+header_strs = |  };
+header_strs = |  die 'Require apache of some description' unless defined $httpd;
+header_strs = |}
