Added AssertOS to stop issues with Windows - some file assumptions are *nix only

--- a/dist.ini
+++ b/dist.ini
@@ -18,3 +18,7 @@ header_strs = |    grep defined, map scalar( which $_ ), qw/ httpd apache apache
 header_strs = |  };
 header_strs = |  die 'Require apache of some description' unless defined $httpd;
 header_strs = |}
+
+[AssertOS]
+os = -MSWin32
+bundle = 0
